[gd_scene load_steps=14 format=2]

[ext_resource path="res://art/UI/main_menu/back hover.png" type="Texture" id=2]
[ext_resource path="res://art/UI/main_menu/2 normal.png" type="Texture" id=3]
[ext_resource path="res://art/UI/main_menu/2 hover.png" type="Texture" id=4]
[ext_resource path="res://art/UI/main_menu/1 hover.png" type="Texture" id=5]
[ext_resource path="res://art/UI/main_menu/1 normal.png" type="Texture" id=6]
[ext_resource path="res://art/UI/main_menu/back pressed.png" type="Texture" id=7]
[ext_resource path="res://art/UI/main_menu/3 normal.png" type="Texture" id=8]
[ext_resource path="res://art/UI/main_menu/1 pressed.png" type="Texture" id=9]
[ext_resource path="res://art/UI/main_menu/back normal.png" type="Texture" id=10]
[ext_resource path="res://art/UI/main_menu/3 hover.png" type="Texture" id=11]
[ext_resource path="res://art/UI/main_menu/3 pressed.png" type="Texture" id=12]
[ext_resource path="res://art/UI/main_menu/2 pressed.png" type="Texture" id=13]
[ext_resource path="res://scripts/level_select_menu.gd" type="Script" id=14]

[node name="LevelSelectMenu" type="CanvasLayer"]

[node name="Control" type="Container" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )

[node name="1" type="TextureButton" parent="Control"]
margin_left = 130.0
margin_top = 50.0
margin_right = 170.0
margin_bottom = 90.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )

[node name="2" type="TextureButton" parent="Control"]
margin_left = 180.0
margin_top = 50.0
margin_right = 220.0
margin_bottom = 90.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="3" type="TextureButton" parent="Control"]
margin_left = 230.0
margin_top = 50.0
margin_right = 270.0
margin_bottom = 90.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 11 )
texture_focused = ExtResource( 11 )

[node name="back" type="TextureButton" parent="Control"]
margin_left = 150.0
margin_top = 100.0
margin_right = 246.0
margin_bottom = 148.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 2 )

[connection signal="button_up" from="Control/1" to="Control" method="change_level" binds= [ "one" ]]
[connection signal="mouse_entered" from="Control/1" to="Control" method="set_focus" binds= [ 0 ]]
[connection signal="button_up" from="Control/2" to="Control" method="change_level" binds= [ "two" ]]
[connection signal="mouse_entered" from="Control/2" to="Control" method="set_focus" binds= [ 1 ]]
[connection signal="button_up" from="Control/3" to="Control" method="change_level" binds= [ "three" ]]
[connection signal="mouse_entered" from="Control/3" to="Control" method="set_focus" binds= [ 2 ]]
[connection signal="button_up" from="Control/back" to="Control" method="go_to_main_view"]
[connection signal="mouse_entered" from="Control/back" to="Control" method="set_focus" binds= [ 3 ]]
